Bug 369199 - wacomtablet kded module crashes on Wayland
Summary: wacomtablet kded module crashes on Wayland
Status: RESOLVED FIXED
Alias: None
Product: wacomtablet
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR crash
Target Milestone: ---
Assignee: Jörg Ehrichs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-22 15:48 UTC by Andrius Štikonas
Modified: 2017-11-05 22:24 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrius Štikonas 2016-09-22 15:48:16 UTC
wacomtablet kded module crashes on Wayland taking down the whole kded5 and leaves plasma barely usable.

Reproducible: Always

Steps to Reproduce:
1. Start plasma session.

Actual Results:  
Crash

Expected Results:  
Calls to X11 must be guarded at runtime.
Comment 1 Valerii Malov 2017-11-05 22:24:33 UTC
Git commit 4f96fd304ef6ecd62c79567bcce2ca92714b17ec by Valeriy Malov.
Committed on 05/11/2017 at 22:23.
Pushed by valeriymalov into branch 'master'.

Avoid crashing kded on wayland session

Summary:
check if we're running under X11 before making some X11 calls
remove unused Wacom::X11Info methods
use QScreen in X11Info::getScreenRotation instead of Xrandr
fix X-KDE-Library in wacomtablet.desktop

Reviewers: rempt, abrahams, xuetianweng

Reviewed By: xuetianweng

Differential Revision: https://phabricator.kde.org/D7074

M  +13   -38   src/common/x11info.cpp
M  +0    -12   src/common/x11info.h
M  +4    -2    src/kded/tabletdaemon.cpp
M  +4    -0    src/kded/tabletfinder.cpp
M  +1    -1    src/kded/wacomtablet.desktop

https://commits.kde.org/wacomtablet/4f96fd304ef6ecd62c79567bcce2ca92714b17ec