Avoid crashing kded on wayland session

Summary:
check if we're running under X11 before making some X11 calls
remove unused Wacom::X11Info methods
use QScreen in X11Info::getScreenRotation instead of Xrandr
fix X-KDE-Library in wacomtablet.desktop
BUG: 369199

Reviewers: rempt, abrahams, xuetianweng

Reviewed By: xuetianweng

Differential Revision: https://phabricator.kde.org/D7074